# malwi-samples

./: CLAUDE.md  README.md  cache.txt  pyproject.toml  pytest.ini
.claude/: settings.local.json
python/benign/auto_git_msg-0.1.1/: main.py
python/malicious/10Cent10_999.0.4/: setup.py
python/malicious/10Cent11_999.0.4/: setup.py
python/malicious/11cent_999.0.0/: setup.py
python/malicious/11cent_999.0.1/: setup.py
python/malicious/11cent_999.0.2/: setup.py
python/malicious/11cent_999.0.3/: setup.py
python/malicious/12cent_999.0.0/: setup.py
python/malicious/12cent_999.0.1/: setup.py
python/malicious/1337z_4.4.7/: setup.py
python/malicious/13cent_999.0.2/: setup.py
python/malicious/15cent_999.0.1/: setup.py
python/malicious/16cent_999.0.1/: setup.py
python/malicious/18923aa_4.96/: setup.py
python/malicious/191239aa_10.87/: setup.py
python/malicious/1923tsl1_5.40/: setup.py
python/malicious/233-misc_0.0.3/: setup.py
python/malicious/282828282828282828_0.0.0/: setup.py
python/malicious/3m-promo-gen-api_1.0/: setup.py
python/malicious/3m-promo-link-gen_1.0/: main.py
python/malicious/3web-py_3web.py-1.0.0/: setup.py
python/malicious/3web_1.0.0/: setup.py
python/malicious/Ailyboostbot_1.0/: setup.py
python/malicious/Ailynitro_1.0/: setup.py
python/malicious/BeaitifulSoop_1.0.0/: setup.py
python/malicious/BeaotifulSoup_1.0.0/: setup.py
python/malicious/BeaufifulSoup_1.0.0/: setup.py
tests/utils/: test_remove_setup.py
utils/: count_and_move_files.sh  flatten.sh  refactor.py  remove_setup.py
(+2935 files in other folders)
